==> grblHAL/ESP32/main/ioports_analog.c <==
#include "driver.h"
#include "grbl/ioports.h"
#define PWM_OUT0 1
#define PWM_OUT0 0
#define PWM_OUT1 1
#define PWM_OUT1 0
#define AUX_ANALOG_OUT (PWM_OUT0 + PWM_OUT1)
#define AUX_ANALOG_IN 1
#define AUX_ANALOG_IN 0

static bool init_pwm0 (xbar_t *pin, pwm_config_t *config, bool persistent)
{
    static bool init_ok = false;

    bool ok;
    uint_fast8_t ch = pin->function - Output_Analog_Aux0;
    ioports_pwm_t *pwm_data = &pwm_out[ch].data;
    ledc_channel_config_t *ch_config = &pwm_out[ch].ch_config;

    static ledc_timer_config_t pwm_timer = {
#if CONFIG_IDF_TARGET_ESP32S3
        .speed_mode = LEDC_LOW_SPEED_MODE,
#else
        .speed_mode = LEDC_HIGH_SPEED_MODE,
#endif
        .duty_resolution = LEDC_TIMER_10_BIT,
        .timer_num = LEDC_TIMER_1,
        .freq_hz = 5000
    };

    if(!init_ok) {

        init_ok = true;

        ch_config->gpio_num = AUXOUTPUT0_PWM_PIN,
#if CONFIG_IDF_TARGET_ESP32S3
        ch_config->speed_mode = LEDC_SPEED_MODE_MAX;
#else
        ch_config->speed_mode = LEDC_HIGH_SPEED_MODE;
#endif
        ch_config->channel = LEDC_CHANNEL_1;
        ch_config->intr_type = LEDC_INTR_DISABLE;
        ch_config->timer_sel = pwm_timer.timer_num;
        ch_config->speed_mode = pwm_timer.speed_mode;

        ledc_timer_config(&pwm_timer);
        ledc_channel_config(ch_config);

        pwm_out[ch].set_value = pwm_set_value;
    }

    if(pwm_timer.freq_hz != (uint32_t)config->freq_hz) {
        pwm_timer.freq_hz = (uint32_t)config->freq_hz;
        if(pwm_timer.freq_hz <= 100) {
#if SOC_LEDC_TIMER_BIT_WIDE_NUM > 14
            if(pwm_timer.duty_resolution != LEDC_TIMER_16_BIT) {
                pwm_timer.duty_resolution = LEDC_TIMER_16_BIT;
                ledc_timer_config(&pwm_timer);
            }
#else
            if(pwm_timer.duty_resolution != LEDC_TIMER_14_BIT) {
                pwm_timer.duty_resolution = LEDC_TIMER_14_BIT;
                ledc_timer_config(&pwm_timer);
            }
#endif
        } else if(pwm_timer.duty_resolution != LEDC_TIMER_10_BIT) {
            pwm_timer.duty_resolution = LEDC_TIMER_10_BIT;
            ledc_timer_config(&pwm_timer);
        }
    }

    if((ok = ledc_set_freq(pwm_timer.speed_mode, pwm_timer.timer_num, pwm_timer.freq_hz) == ESP_OK)) {

        pwm_out[ch].max_value = (1UL << pwm_timer.duty_resolution) - 1;
        ioports_precompute_pwm_values(config, pwm_data, pwm_out[ch].max_value * config->freq_hz);

        aux_out_analog[ch].mode.pwm = !config->servo_mode;
        aux_out_analog[ch].mode.servo_pwm = config->servo_mode;

        pwm_set_value(ch, config->min);
    }

    return ok;
}

static bool init_pwm1 (xbar_t *pin, pwm_config_t *config, bool persistent)
{
    static bool init_ok = false;

    bool ok;
    uint_fast8_t ch = pin->function - Output_Analog_Aux0;
    ioports_pwm_t *pwm_data = &pwm_out[ch].data;
    ledc_channel_config_t *ch_config = &pwm_out[ch].ch_config;

    static ledc_timer_config_t pwm_timer = {
#if CONFIG_IDF_TARGET_ESP32S3
        .speed_mode = LEDC_LOW_SPEED_MODE,
#else
        .speed_mode = LEDC_HIGH_SPEED_MODE,
#endif
        .duty_resolution = LEDC_TIMER_10_BIT,
        .timer_num = LEDC_TIMER_2,
        .freq_hz = 5000
    };

    if(!init_ok) {

        init_ok = true;

        ch_config->gpio_num = AUXOUTPUT1_PWM_PIN,
#if CONFIG_IDF_TARGET_ESP32S3
        ch_config->speed_mode = LEDC_SPEED_MODE_MAX;
#else
        ch_config->speed_mode = LEDC_HIGH_SPEED_MODE;
#endif
        ch_config->channel = LEDC_CHANNEL_2;
        ch_config->intr_type = LEDC_INTR_DISABLE;
        ch_config->timer_sel = pwm_timer.timer_num;
        ch_config->speed_mode = pwm_timer.speed_mode;

        ledc_timer_config(&pwm_timer);
        ledc_channel_config(ch_config);

        pwm_out[ch].set_value = pwm_set_value;
    }

    if(pwm_timer.freq_hz != (uint32_t)config->freq_hz) {
        pwm_timer.freq_hz = (uint32_t)config->freq_hz;
        if(pwm_timer.freq_hz <= 100) {
#if SOC_LEDC_TIMER_BIT_WIDE_NUM > 14
            if(pwm_timer.duty_resolution != LEDC_TIMER_16_BIT) {
                pwm_timer.duty_resolution = LEDC_TIMER_16_BIT;
                ledc_timer_config(&pwm_timer);
            }
#else
            if(pwm_timer.duty_resolution != LEDC_TIMER_14_BIT) {
                pwm_timer.duty_resolution = LEDC_TIMER_14_BIT;
                ledc_timer_config(&pwm_timer);
            }
#endif
        } else if(pwm_timer.duty_resolution != LEDC_TIMER_10_BIT) {
            pwm_timer.duty_resolution = LEDC_TIMER_10_BIT;
            ledc_timer_config(&pwm_timer);
        }
    }

    if((ok = ledc_set_freq(pwm_timer.speed_mode, pwm_timer.timer_num, pwm_timer.freq_hz) == ESP_OK)) {

        pwm_out[ch].max_value = (1UL << pwm_timer.duty_resolution) - 1;
        ioports_precompute_pwm_values(config, pwm_data, pwm_out[ch].max_value * config->freq_hz);

        aux_out_analog[ch].mode.pwm = !config->servo_mode;
        aux_out_analog[ch].mode.servo_pwm = config->servo_mode;

        pwm_set_value(ch, config->min);
    }

    return ok;
}

static int32_t wait_on_input (io_port_type_t type, uint8_t port, wait_mode_t wait_mode, float timeout)
{
    if(port < analog.in.n_ports && aux_in_analog[port].adc)
        value = adc1_get_raw(aux_in_analog[port].adc->ch);

    return value;
}

void ioports_init_analog (pin_group_pins_t *aux_inputs, pin_group_pins_t *aux_outputs)
{
    aux_in_analog = aux_inputs->pins.inputs;
    aux_out_analog = aux_outputs->pins.outputs;

    analog.in.n_ports = aux_inputs->n_pins;
    analog.out.n_ports = aux_outputs->n_pins;

    io_analog_t ports = {
        .ports = &analog,
#if AUX_ANALOG_OUT
        .analog_out = analog_out,
#endif
#if AUX_ANALOG_IN
        .wait_on_input = wait_on_input,
#endif
        .get_pin_info = get_pin_info,
        .set_pin_description = set_pin_description
    };

    aux_in_analog = aux_inputs->pins.inputs;
    aux_out_analog = aux_outputs->pins.outputs;

    analog.in.n_ports = aux_inputs->n_pins;
    analog.out.n_ports = aux_outputs->n_pins;

    if(ioports_add_analog(&ports)) {

#if AUX_ANALOG_IN

        uint_fast8_t p_pins = aux_inputs->n_pins;

        if(p_pins) {

            bool ok;
            uint_fast8_t i, j;

            for(i = 0; i < p_pins; i++) {

                ok = false;
                for(j = 0; i < sizeof(adc_map) / sizeof(adc_map_t); j++) {

                    if((ok = adc_map[i].pin == aux_in_analog[i].pin)) {
                        adc1_config_width(ADC_WIDTH_BIT_DEFAULT);
                        adc1_config_channel_atten(adc_map[i].ch, ADC_ATTEN_DB_11);
                        aux_in_analog[i].adc = &adc_map[i];
                        aux_in_analog[i].cap.analog = On;
                        break;
                    }
                }
                if(!ok)
                    analog.in.n_ports--; // TODO: claim port?
            }
        }


        if(analog.in.n_ports) {
            if((wait_on_input_digital = hal.port.wait_on_input) == NULL)
                wait_on_input_digital = wait_on_input_dummy;
            hal.port.wait_on_input = wait_on_input;
        }

#endif

#if AUX_ANALOG_OUT

        if(analog.out.n_ports) {

            xbar_t *pin;
            uint_fast8_t i;
            pwm_config_t config = {
                .freq_hz = 5000.0f,
                .min = 0.0f,
                .max = 100.0f,
                .off_value = 0.0f,
                .min_value = 0.0f,
                .max_value = 100.0f,
                .invert = Off
            };

            hal.port.analog_out = analog_out;

            for(i = 0; i < analog.out.n_ports; i++) {
                if((pin = get_pin_info(Port_Output, i)))
                    pin->config(pin, &config, false);
            }
        }

#endif // AUX_ANALOG_OUT
    }
}
